# Portfolio

./: README.md  skills-lock.json
.claude/skills/nextjs-best-practices/: SKILL.md
01_Frontend/: .gitignore  next.config.ts  package-lock.json  package.json  sanity.config.ts  vitest.setup.ts
01_Frontend/app/: globals.css
01_Frontend/app/(portfolio)/: error.tsx  layout.tsx
01_Frontend/app/actions/: create-session.ts
01_Frontend/components/: 3dBoosttrail.tsx  BoostTrail.tsx  CanvasCursor.tsx  CursorDot.tsx  CursorRing.tsx  DarkModeToggle.tsx  FloatingDockClient.tsx  FloatingModeToggle.tsx  LeafTrail.tsx  MomijiLeafTrail.tsx  Navbar.tsx  NavbarClient.tsx  PortfolioContent.tsx  Preloader.tsx  PreloaderWrapper.tsx  SakuraLeafTrail.tsx  SidebarToggle.tsx  app-sidebar.tsx  error-boundary.tsx
01_Frontend/components/chat/: Chat.tsx  ChatWrapper.tsx
01_Frontend/hooks/: use-canvas-cursor.ts  use-webgl-check.ts
01_Frontend/lib/: config.ts  utils.test.ts
01_Frontend/sanity/: env.ts
02_Backend/: .env.example  ARCHITECTURE.md  Dockerfile  agent.py  cache_config.py  cleanup_tests.bat  groq_optimizer.py  groq_validator.py  logging_config.py  main.py  memory_store.py  pyproject.toml  rate_limiter.py  requirements.txt  sanity_client.py  server.py  test_profile.py  test_rate_limit.py  tools.py  update_profile.py
02_Backend/models/: session.py
02_Backend/tests/integration/: test_agent_data_source.py  test_sanity_verification.py  test_sse_streaming.py  test_user_stories.py
02_Backend/tests/unit/: test_rate_limit.py  test_session_management.py
(+53 files in other folders)
